--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./index.js"
   },
-  "author": "",
+  "author": "Mark Phillips",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
