first commit at second milestone

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pdf-parse": "^1.1.1",
     "pdf-to-text": "0.0.7",
     "querystring": "^0.2.0",
+    "simple-color-logger": "^1.2.3",
     "socks": "^2.3.3",
     "socks-proxy-agent": "^5.0.0",
     "textract": "^2.5.0",
