completed annual report fetch

--- a/.env
+++ b/.env
@@ -1,4 +1,17 @@
-SOCKS_USER='xKyz62wmQ2';
-SOCKS_PASSWORD='dcmkJg9Gbii';
-SOCKS_HOST='ams.socks.ipvanish.com';
+SOCKS_USER=K8Zz58NO
+SOCKS_PASSWORD=dHYuJTSfw37
+SOCKS_HOST=ams.socks.ipvanish.com
 SOCKS_PORT=1080;
+
+
+
+
+const user = 'xKyz62wmQ2',
+  pass = 'dcmkJg9Gbii',
+  host = 'ams.socks.ipvanish.com',
+  port = 1080;
+
+  //   Username: K8Zz58NO
+// Password: dHYuJTSfw37
+// Hostname: ams.socks.ipvanish.com
+// Port: 1080
