--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "cli-color": "^2.0.0",
     "dotenv": "^8.2.0",
     "file-saver": "^2.0.2",
     "filesaver": "0.0.11",
