--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node ./index.js",
+    "save": "git add . && git commit -m 'update' && git push"
   },
   "author": "Mark Phillips",
   "license": "ISC",
