--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cli-color": "^2.0.0",
+    "csv": "^5.3.2",
     "dotenv": "^8.2.0",
     "file-saver": "^2.0.2",
     "filesaver": "0.0.11",
