--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "stopword": "^1.0.1",
     "textract": "^2.5.0",
     "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "prettier": "2.0.5"
   }
 }
