--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mark Phillips",
   "license": "ISC",
   "dependencies": {
+    "address-validator": "^0.2.3",
     "axios": "^0.19.2",
     "cli-color": "^2.0.0",
     "csv": "^5.3.2",
