--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./index.js",
     "clean": "rm -rf ./csv-output/*",
     "count": "cat ./csv-output/* | wc -l",
-    "save": "git add . && git commit -m 'update' && git push"
+    "save": "git add . && git commit -m 'update' && git push origin develop"
   },
   "author": "Mark Phillips",
   "license": "ISC",
