--- a/package.json
+++ b/package.json
@@ -4,40 +4,46 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
     "stop": "forever stop",
+    "build-ts": "tsc",
+    "start": "tsc && yarn run serve",
+    "serve": "node dist/index.js",
     "stopall": "forever stopall",
-    "clean": "rm -rf ./csv-output/*",
+    "clean": "rm -rf ./searches/*",
     "count": "cat ./csv-output/* | wc -l",
     "save": "git add . && git commit -m 'update' && git push origin develop"
   },
   "author": "Mark Phillips",
   "license": "ISC",
   "dependencies": {
+    "@types/cli-color": "^2.0.0",
+    "@types/node-fetch": "^2.5.7",
+    "@types/p-limit": "2.0.0",
+    "@types/pdf-parse": "^1.1.0",
+    "@types/stopword": "^0.3.0",
     "address-validator": "^0.2.3",
     "axios": "^0.19.2",
     "cli-color": "^2.0.0",
     "csv": "^5.3.2",
     "dotenv": "^8.2.0",
-    "file-saver": "^2.0.2",
-    "filesaver": "0.0.11",
     "forever": "^3.0.0",
     "https": "^1.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.20",
-    "node-blob": "0.0.2",
+    "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
     "p-limit": "^3.0.1",
+    "p-queue": "^6.5.0",
     "pdf-parse": "^1.1.1",
-    "pdf-to-text": "0.0.7",
     "querystring": "^0.2.0",
-    "simple-color-logger": "^1.2.3",
     "socks": "^2.3.3",
     "socks-proxy-agent": "^5.0.0",
     "stopword": "^1.0.1",
-    "textract": "^2.5.0",
-    "url": "^0.11.0"
+    "typescript": "^3.9.6",
+    "url": "^0.11.0",
+    "winston": "^3.3.3",
+    "yargs": "^15.4.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
