--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "start": "tsc && yarn run serve",
     "serve": "node dist/index.js",
     "stopall": "forever stopall",
-    "clean": "rm -rf ./searches/*",
+    "clean": "rm -rf ./searches/* && rm -rf ./logs/*",
     "count": "cat ./csv-output/* | wc -l",
     "save": "git add . && git commit -m 'update' && git push origin develop"
   },
   "author": "Mark Phillips",
   "license": "ISC",
   "dependencies": {
+    "@types/app-root-path": "^1.2.4",
     "@types/cli-color": "^2.0.0",
+    "@types/morgan": "^1.9.1",
     "@types/node-fetch": "^2.5.7",
     "@types/p-limit": "2.0.0",
     "@types/pdf-parse": "^1.1.0",
     "@types/stopword": "^0.3.0",
     "address-validator": "^0.2.3",
+    "app-root-path": "^3.0.0",
     "axios": "^0.19.2",
     "cli-color": "^2.0.0",
     "csv": "^5.3.2",
+    "delay": "^4.3.0",
     "dotenv": "^8.2.0",
     "forever": "^3.0.0",
     "https": "^1.0.0",
