--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start": "tsc && yarn run serve",
     "serve": "node dist/index.js",
     "stopall": "forever stopall",
-    "clean": "rm -rf ./searches/* && rm -rf ./logs/*",
+    "clean": "rm -rf ./csv-output/* && rm -rf ./logs/*",
     "count": "cat ./csv-output/* | wc -l",
     "save": "git add . && git commit -m 'update' && git push origin develop"
+  },
+  "bin": {
+    "yargs": "cli.ts"
   },
   "author": "Mark Phillips",
   "license": "ISC",
@@ -23,6 +26,7 @@
     "@types/p-limit": "2.0.0",
     "@types/pdf-parse": "^1.1.0",
     "@types/stopword": "^0.3.0",
+    "@types/yargs": "^15.0.5",
     "address-validator": "^0.2.3",
     "app-root-path": "^3.0.0",
     "axios": "^0.19.2",
