--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "stop": "forever stop",
     "build-ts": "tsc",
+    "yargs": "tsc && dist/cli.js",
     "start": "tsc && yarn run serve",
     "serve": "node dist/index.js",
     "stopall": "forever stopall",
@@ -14,7 +15,7 @@
     "save": "git add . && git commit -m 'update' && git push origin develop"
   },
   "bin": {
-    "yargs": "cli.ts"
+    "yargs": "tsc && dist/cli.js"
   },
   "author": "Mark Phillips",
   "license": "ISC",
@@ -34,6 +35,7 @@
     "csv": "^5.3.2",
     "delay": "^4.3.0",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "forever": "^3.0.0",
     "https": "^1.0.0",
     "moment": "^2.27.0",
@@ -51,7 +53,8 @@
     "typescript": "^3.9.6",
     "url": "^0.11.0",
     "winston": "^3.3.3",
-    "yargs": "^15.4.0"
+    "yargs": "^15.4.0",
+    "yarn-link": "^1.0.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
