--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "wacorp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/cli.js",
   "scripts": {
-    "stop": "forever stop",
-    "build-ts": "tsc",
-    "yargs": "tsc && dist/cli.js",
-    "start": "tsc && yarn run serve",
+    "forever-stop": "forever stop",
+    "start": "nodemon --watch '**/*.ts' --exec 'ts-node' index.ts",
+    "start-app": "tsc && yarn run serve",
     "serve": "node dist/index.js",
+    "corps": "tsc && dist/cli.js",
     "stopall": "forever stopall",
     "clean": "rm -rf ./csv-output/* && rm -rf ./logs/*",
     "count": "cat ./csv-output/* | wc -l",
-    "save": "git add . && git commit -m 'update' && git push origin develop"
+    "save": "git add . && git commit -m 'update' && git push origin develop",
+    "create": "npm run build && npm run test",
+    "build": "tsc -p .",
+    "test": "sudo yarn -g && corps",
+    "refresh": "rm -rf ./node_modules ./yarn.lock && yarn install"
   },
   "bin": {
-    "yargs": "tsc && dist/cli.js"
+    "corps": "node dist/cli.js"
   },
   "author": "Mark Phillips",
   "license": "ISC",
@@ -23,6 +27,7 @@
     "@types/app-root-path": "^1.2.4",
     "@types/cli-color": "^2.0.0",
     "@types/morgan": "^1.9.1",
+    "@types/node": "^14.0.20",
     "@types/node-fetch": "^2.5.7",
     "@types/p-limit": "2.0.0",
     "@types/pdf-parse": "^1.1.0",
@@ -43,6 +48,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4",
     "p-limit": "^3.0.1",
     "p-queue": "^6.5.0",
     "pdf-parse": "^1.1.1",
@@ -50,6 +56,7 @@
     "socks": "^2.3.3",
     "socks-proxy-agent": "^5.0.0",
     "stopword": "^1.0.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
     "url": "^0.11.0",
     "winston": "^3.3.3",
