--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "save": "git add . && git commit -m 'update' && git push origin develop",
     "create": "npm run build && npm run test",
     "build": "tsc -p .",
+    "specialized": "yarn run corps company_keyword_scraper --c=1 --id=-1 --output=specialized.csv",
     "test": "sudo yarn -g && corps",
     "refresh": "rm -rf ./node_modules ./yarn.lock && yarn install"
   },
