--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "serve": "node dist/index.js",
     "corps": "tsc && dist/cli.js",
     "stopall": "forever stopall",
-    "clean": "rm -rf ./csv-output-*/* && rm -rf ./logs/* && rm -rf ./dist/*",
+    "clean": "rm -rf ./csv-output-*/* && rm -rf ./csv-output*/* && rm -rf ./logs/* && rm -rf ./dist/*",
     "count": "cat ./csv-output/* | wc -l",
     "save": "git add . && git commit -m 'update' && git push origin develop",
     "create": "npm run build && npm run test",
     "build": "tsc -p .",
-    "specialized": "yarn run corps company_keyword_scraper --c=1 --id=-1 --output=specialized.csv",
+    "specialized": "yarn run corps company_keyword_scraper --c=1 --id=-1 --keyword=specialized",
+    "illustrations": "yarn run corps company_keyword_scraper --c=1 --id=-1 --keyword=illustrations",
+    "ecocarcafe": "yarn run corps company_keyword_scraper --c=1 --id=-1 --keyword=ecocarcafe",
+    "lawfirm": "yarn run corps company_keyword_scraper --c=1 --id=-1 --keyword=lawfirm",
+    "all_business": "yarn run corps company_info_scraper --c=1",
     "test": "sudo yarn -g && corps",
-    "runall": "tsc && dist/cli.js company_keyword_scraper --c=1 --id=-1 --keyword=illustrations && tsc && dist/cli.js company_info_scraper --c=1 --count=-1",
+    "all_keywords": "yarn run specialized && yarn run illustrations && yarn run ecocarcafe && yarn run lawfirm ",
+    "all": "yarn run all_keywords && yarn run all_business",
     "refresh": "rm -rf ./node_modules ./yarn.lock && yarn install"
   },
   "bin": {
