--- a/package.json
+++ b/package.json
@@ -19,8 +19,18 @@
     "illustrations": "yarn run corps company_keyword_scraper --c=1 --id=-1 --keyword=illustrations",
     "ecocarcafe": "yarn run corps company_keyword_scraper --c=1 --id=-1 --keyword=ecocarcafe",
     "lawfirm": "yarn run corps company_keyword_scraper --c=1 --id=-1 --keyword=lawfirm",
-    "all_business": "yarn run corps company_info_scraper --c=1",
+    "all_business": "yarn run wllc && yarn run wllcp && yarn run wllp && yarn run wlp && yarn run wpllc && yarn run wpllp && yarn run wpsc && yarn run wpc && yarn run wnc && yarn run wpbc",
     "test": "sudo yarn -g && corps",
+    "wllc": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_LIMITED_LIABILITY_CORPORATION",
+    "wllcp": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_LIMITED_LIABILITY_CORPORATION_PARTNERSHIP",
+    "wllp": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_LIMITED_LIABILITY_PARTNERSHIP",
+    "wlp": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_LIMITED_PARTNERSHIP",
+    "wpllc": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_PROFESSIONAL_LIMITED_LIABILITY_COMPANY",
+    "wpllp": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_PROFESSIONAL_LIMITED_LIABILITY_PARTNERSHIP",
+    "wpsc": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_PROFESSIONAL_SERVICE_CORPORATION",
+    "wpc": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_PROFIT_CORPORATION",
+    "wnc": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_NONPROFIT_CORPORATION",
+    "wpbc": "yarn run corps company_info_scraper --concurency=1 --count=ALL --business_type=WA_PUBLIC_BENEFIT_CORPORATION",
     "all_keywords": "yarn run specialized && yarn run illustrations && yarn run ecocarcafe && yarn run lawfirm ",
     "all": "yarn run all_keywords && yarn run all_business",
     "refresh": "rm -rf ./node_modules ./yarn.lock && yarn install"
